[update] Hyprland config

--- a/config/hypr/Modules/All-About-UX/window_rules.conf
+++ b/config/hypr/Modules/All-About-UX/window_rules.conf
@@ -20,9 +20,8 @@ windowrule = tag +notif, class:^(swaync-(control-center|notification-window|clie
 # ──────────────────────────────
 windowrule = tag +terminal, class:^(Alacritty|kitty|kitty-dropterm)$
 
-# Screenshare / Streaming
 # ──────────────────────────────
-# Toolkit backends
+# Screenshare / Streaming
 # ──────────────────────────────
 windowrule = tag +screenshare, class:^(com.obsproject.Studio)$
 
@@ -35,10 +34,10 @@ windowrule = tag +multimedia_video, class:^([Mm]pv|vlc)$
 # ──────────────────────────────
 # Settings / Control GUIs
 # ──────────────────────────────
+windowrulev2 = float, center, class:^(pavucontrol|org.pulseaudio.pavucontrol|com.saivert.pwvucontrol)$
 windowrule = tag +settings, title:(Kvantum Manager)
 windowrule = tag +settings, class:^(file-roller|org.gnome.FileRoller)$
 windowrule = tag +settings, class:^(nm-applet|nm-connection-editor|blueman-manager)$
-windowrule = tag +settings, class:^(pavucontrol|org.pulseaudio.pavucontrol|com.saivert.pwvucontrol)$
 windowrule = tag +settings, class:^(qt5ct|qt6ct|[Yy]ad)$
 windowrule = tag +settings, class:(xdg-desktop-portal-gtk)
 
@@ -51,8 +50,8 @@ windowrule = opacity 1.0, tag:multimedia_video*
 # ──────────────────────────────
 # Center important utilities
 # ──────────────────────────────
-windowrule = center, class:^(pavucontrol|org.pulseaudio.pavucontrol|com.saivert.pwvucontrol)$
-windowrule = move 72% 7%, title:^(Picture-in-Picture)$
+windowrulev2 = float, center, title:^(Picture-in-Picture)$
+windowrulev2 = pin,   title:^(Picture-in-Picture)$
 
 # ──────────────────────────────
 # Idle inhibit when fullscreen
@@ -60,34 +59,21 @@ windowrule = move 72% 7%, title:^(Picture-in-Picture)$
 windowrule = idleinhibit fullscreen, fullscreen:1
 
 # ──────────────────────────────
-# Universal floating dialogs
+# File Managers
 # ──────────────────────────────
-windowrulev2 = float, xdg_dialog
-windowrulev2 = float, popup
-windowrulev2 = float, utility
-windowrulev2 = center, floating:1
+# Float for dialogs (Save/Open/Choose), tile for main window
+windowrulev2 = float, title:(Save|Open|Choose)
+windowrulev2 = float, class:^(Thunar|Nautilus|Dolphin|PCManFM|Caja)$, title:(Save|Open|Choose)
+windowrulev2 = tile, class:^(Thunar|Nautilus|Dolphin|PCManFM|Caja)$
 
 # ──────────────────────────────
-# Force browsers tiled unless true dialog
+# Wofi launcher
 # ──────────────────────────────
-windowrulev2 = tile, tag:browser*
-
-# ──────────────────────────────
-# Specific float rules
-# ──────────────────────────────
-windowrule = float, title:^(Picture-in-Picture)$
-windowrule = pin,   title:^(Picture-in-Picture)$
-
-# ──────────────────────────────
-# Example: custom app float/size
-# ──────────────────────────────
-windowrulev2 = float, class:(clipse)
-windowrulev2 = size 622 652, class:(clipse)
+windowrulev2 = float, center, class:^(Wofi)$
 
 # ──────────────────────────────
 # Opacity rules
 # ──────────────────────────────
-
 $active   = 0.9
 $inactive = 0.88
 
@@ -109,6 +95,5 @@ windowrule = opacity $active $inactive, title:^(Picture-in-Picture)$
 # ──────────────────────────────
 # LAYER RULES
 # ──────────────────────────────
-
 layerrule = blur, notifications
 layerrule = ignorezero, notifications
