--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -6,7 +6,7 @@ source = ~/.config/hypr/Modules/All-About-UX/variables.conf
 source = $UX/environment.conf
 source = $UX/startup.conf
 source = $UX/monitors.conf
-source = $UX/keybindings.conf
+source = $UX/keybinds.conf
 source = $UX/inputs.conf
 source = $UX/window_rules.conf
 
