[add] Hyprland, matugen dots

--- a/config/hypr/Modules/All-About-UI/colors.conf
+++ b/config/hypr/Modules/All-About-UI/colors.conf
@@ -1,150 +1,150 @@
 
-$image = /home/dobby/Pictures/Wallpapers/line_icons.png
-$background = rgba(141218ff)
+$image = /home/dobby/Pictures/Wallpapers/Sierra Something.jpg
+$background = rgba(0e1415ff)
 
-$image = /home/dobby/Pictures/Wallpapers/line_icons.png
+$image = /home/dobby/Pictures/Wallpapers/Sierra Something.jpg
 $error = rgba(ffb4abff)
 
-$image = /home/dobby/Pictures/Wallpapers/line_icons.png
+$image = /home/dobby/Pictures/Wallpapers/Sierra Something.jpg
 $error_container = rgba(93000aff)
 
-$image = /home/dobby/Pictures/Wallpapers/line_icons.png
-$inverse_on_surface = rgba(322f35ff)
+$image = /home/dobby/Pictures/Wallpapers/Sierra Something.jpg
+$inverse_on_surface = rgba(2b3232ff)
 
-$image = /home/dobby/Pictures/Wallpapers/line_icons.png
-$inverse_primary = rgba(64558fff)
+$image = /home/dobby/Pictures/Wallpapers/Sierra Something.jpg
+$inverse_primary = rgba(00696eff)
 
-$image = /home/dobby/Pictures/Wallpapers/line_icons.png
-$inverse_surface = rgba(e6e1e9ff)
+$image = /home/dobby/Pictures/Wallpapers/Sierra Something.jpg
+$inverse_surface = rgba(dde4e4ff)
 
-$image = /home/dobby/Pictures/Wallpapers/line_icons.png
-$on_background = rgba(e6e1e9ff)
+$image = /home/dobby/Pictures/Wallpapers/Sierra Something.jpg
+$on_background = rgba(dde4e4ff)
 
-$image = /home/dobby/Pictures/Wallpapers/line_icons.png
+$image = /home/dobby/Pictures/Wallpapers/Sierra Something.jpg
 $on_error = rgba(690005ff)
 
-$image = /home/dobby/Pictures/Wallpapers/line_icons.png
+$image = /home/dobby/Pictures/Wallpapers/Sierra Something.jpg
 $on_error_container = rgba(ffdad6ff)
 
-$image = /home/dobby/Pictures/Wallpapers/line_icons.png
-$on_primary = rgba(35275dff)
+$image = /home/dobby/Pictures/Wallpapers/Sierra Something.jpg
+$on_primary = rgba(003739ff)
 
-$image = /home/dobby/Pictures/Wallpapers/line_icons.png
-$on_primary_container = rgba(e8ddffff)
+$image = /home/dobby/Pictures/Wallpapers/Sierra Something.jpg
+$on_primary_container = rgba(9cf0f6ff)
 
-$image = /home/dobby/Pictures/Wallpapers/line_icons.png
-$on_primary_fixed = rgba(201047ff)
+$image = /home/dobby/Pictures/Wallpapers/Sierra Something.jpg
+$on_primary_fixed = rgba(002021ff)
 
-$image = /home/dobby/Pictures/Wallpapers/line_icons.png
-$on_primary_fixed_variant = rgba(4c3e75ff)
+$image = /home/dobby/Pictures/Wallpapers/Sierra Something.jpg
+$on_primary_fixed_variant = rgba(004f53ff)
 
-$image = /home/dobby/Pictures/Wallpapers/line_icons.png
-$on_secondary = rgba(332d41ff)
+$image = /home/dobby/Pictures/Wallpapers/Sierra Something.jpg
+$on_secondary = rgba(1b3436ff)
 
-$image = /home/dobby/Pictures/Wallpapers/line_icons.png
-$on_secondary_container = rgba(e8def8ff)
+$image = /home/dobby/Pictures/Wallpapers/Sierra Something.jpg
+$on_secondary_container = rgba(cce8e9ff)
 
-$image = /home/dobby/Pictures/Wallpapers/line_icons.png
-$on_secondary_fixed = rgba(1d192bff)
+$image = /home/dobby/Pictures/Wallpapers/Sierra Something.jpg
+$on_secondary_fixed = rgba(041f21ff)
 
-$image = /home/dobby/Pictures/Wallpapers/line_icons.png
-$on_secondary_fixed_variant = rgba(494458ff)
+$image = /home/dobby/Pictures/Wallpapers/Sierra Something.jpg
+$on_secondary_fixed_variant = rgba(324b4dff)
 
-$image = /home/dobby/Pictures/Wallpapers/line_icons.png
-$on_surface = rgba(e6e1e9ff)
+$image = /home/dobby/Pictures/Wallpapers/Sierra Something.jpg
+$on_surface = rgba(dde4e4ff)
 
-$image = /home/dobby/Pictures/Wallpapers/line_icons.png
-$on_surface_variant = rgba(cac4cfff)
+$image = /home/dobby/Pictures/Wallpapers/Sierra Something.jpg
+$on_surface_variant = rgba(bec8c9ff)
 
-$image = /home/dobby/Pictures/Wallpapers/line_icons.png
-$on_tertiary = rgba(492532ff)
+$image = /home/dobby/Pictures/Wallpapers/Sierra Something.jpg
+$on_tertiary = rgba(1f314cff)
 
-$image = /home/dobby/Pictures/Wallpapers/line_icons.png
-$on_tertiary_container = rgba(ffd9e3ff)
+$image = /home/dobby/Pictures/Wallpapers/Sierra Something.jpg
+$on_tertiary_container = rgba(d6e3ffff)
 
-$image = /home/dobby/Pictures/Wallpapers/line_icons.png
-$on_tertiary_fixed = rgba(31101dff)
+$image = /home/dobby/Pictures/Wallpapers/Sierra Something.jpg
+$on_tertiary_fixed = rgba(081c36ff)
 
-$image = /home/dobby/Pictures/Wallpapers/line_icons.png
-$on_tertiary_fixed_variant = rgba(633b49ff)
+$image = /home/dobby/Pictures/Wallpapers/Sierra Something.jpg
+$on_tertiary_fixed_variant = rgba(364764ff)
 
-$image = /home/dobby/Pictures/Wallpapers/line_icons.png
-$outline = rgba(948f99ff)
+$image = /home/dobby/Pictures/Wallpapers/Sierra Something.jpg
+$outline = rgba(899393ff)
 
-$image = /home/dobby/Pictures/Wallpapers/line_icons.png
-$outline_variant = rgba(49454eff)
+$image = /home/dobby/Pictures/Wallpapers/Sierra Something.jpg
+$outline_variant = rgba(3f4949ff)
 
-$image = /home/dobby/Pictures/Wallpapers/line_icons.png
-$primary = rgba(cebdfeff)
+$image = /home/dobby/Pictures/Wallpapers/Sierra Something.jpg
+$primary = rgba(80d4d9ff)
 
-$image = /home/dobby/Pictures/Wallpapers/line_icons.png
-$primary_container = rgba(4c3e75ff)
+$image = /home/dobby/Pictures/Wallpapers/Sierra Something.jpg
+$primary_container = rgba(004f53ff)
 
-$image = /home/dobby/Pictures/Wallpapers/line_icons.png
-$primary_fixed = rgba(e8ddffff)
+$image = /home/dobby/Pictures/Wallpapers/Sierra Something.jpg
+$primary_fixed = rgba(9cf0f6ff)
 
-$image = /home/dobby/Pictures/Wallpapers/line_icons.png
-$primary_fixed_dim = rgba(cebdfeff)
+$image = /home/dobby/Pictures/Wallpapers/Sierra Something.jpg
+$primary_fixed_dim = rgba(80d4d9ff)
 
-$image = /home/dobby/Pictures/Wallpapers/line_icons.png
+$image = /home/dobby/Pictures/Wallpapers/Sierra Something.jpg
 $scrim = rgba(000000ff)
 
-$image = /home/dobby/Pictures/Wallpapers/line_icons.png
-$secondary = rgba(cbc3dcff)
+$image = /home/dobby/Pictures/Wallpapers/Sierra Something.jpg
+$secondary = rgba(b1cccdff)
 
-$image = /home/dobby/Pictures/Wallpapers/line_icons.png
-$secondary_container = rgba(494458ff)
+$image = /home/dobby/Pictures/Wallpapers/Sierra Something.jpg
+$secondary_container = rgba(324b4dff)
 
-$image = /home/dobby/Pictures/Wallpapers/line_icons.png
-$secondary_fixed = rgba(e8def8ff)
+$image = /home/dobby/Pictures/Wallpapers/Sierra Something.jpg
+$secondary_fixed = rgba(cce8e9ff)
 
-$image = /home/dobby/Pictures/Wallpapers/line_icons.png
-$secondary_fixed_dim = rgba(cbc3dcff)
+$image = /home/dobby/Pictures/Wallpapers/Sierra Something.jpg
+$secondary_fixed_dim = rgba(b1cccdff)
 
-$image = /home/dobby/Pictures/Wallpapers/line_icons.png
+$image = /home/dobby/Pictures/Wallpapers/Sierra Something.jpg
 $shadow = rgba(000000ff)
 
-$image = /home/dobby/Pictures/Wallpapers/line_icons.png
-$source_color = rgba(272235ff)
+$image = /home/dobby/Pictures/Wallpapers/Sierra Something.jpg
+$source_color = rgba(5a8a8dff)
 
-$image = /home/dobby/Pictures/Wallpapers/line_icons.png
-$surface = rgba(141218ff)
+$image = /home/dobby/Pictures/Wallpapers/Sierra Something.jpg
+$surface = rgba(0e1415ff)
 
-$image = /home/dobby/Pictures/Wallpapers/line_icons.png
-$surface_bright = rgba(3b383eff)
+$image = /home/dobby/Pictures/Wallpapers/Sierra Something.jpg
+$surface_bright = rgba(343a3bff)
 
-$image = /home/dobby/Pictures/Wallpapers/line_icons.png
-$surface_container = rgba(211f24ff)
+$image = /home/dobby/Pictures/Wallpapers/Sierra Something.jpg
+$surface_container = rgba(1a2121ff)
 
-$image = /home/dobby/Pictures/Wallpapers/line_icons.png
-$surface_container_high = rgba(2b292fff)
+$image = /home/dobby/Pictures/Wallpapers/Sierra Something.jpg
+$surface_container_high = rgba(252b2bff)
 
-$image = /home/dobby/Pictures/Wallpapers/line_icons.png
-$surface_container_highest = rgba(36343aff)
+$image = /home/dobby/Pictures/Wallpapers/Sierra Something.jpg
+$surface_container_highest = rgba(303636ff)
 
-$image = /home/dobby/Pictures/Wallpapers/line_icons.png
-$surface_container_low = rgba(1d1b20ff)
+$image = /home/dobby/Pictures/Wallpapers/Sierra Something.jpg
+$surface_container_low = rgba(161d1dff)
 
-$image = /home/dobby/Pictures/Wallpapers/line_icons.png
-$surface_container_lowest = rgba(0f0d13ff)
+$image = /home/dobby/Pictures/Wallpapers/Sierra Something.jpg
+$surface_container_lowest = rgba(090f10ff)
 
-$image = /home/dobby/Pictures/Wallpapers/line_icons.png
-$surface_dim = rgba(141218ff)
+$image = /home/dobby/Pictures/Wallpapers/Sierra Something.jpg
+$surface_dim = rgba(0e1415ff)
 
-$image = /home/dobby/Pictures/Wallpapers/line_icons.png
-$surface_tint = rgba(cebdfeff)
+$image = /home/dobby/Pictures/Wallpapers/Sierra Something.jpg
+$surface_tint = rgba(80d4d9ff)
 
-$image = /home/dobby/Pictures/Wallpapers/line_icons.png
-$surface_variant = rgba(49454eff)
+$image = /home/dobby/Pictures/Wallpapers/Sierra Something.jpg
+$surface_variant = rgba(3f4949ff)
 
-$image = /home/dobby/Pictures/Wallpapers/line_icons.png
-$tertiary = rgba(efb8c8ff)
+$image = /home/dobby/Pictures/Wallpapers/Sierra Something.jpg
+$tertiary = rgba(b6c7e9ff)
 
-$image = /home/dobby/Pictures/Wallpapers/line_icons.png
-$tertiary_container = rgba(633b49ff)
+$image = /home/dobby/Pictures/Wallpapers/Sierra Something.jpg
+$tertiary_container = rgba(364764ff)
 
-$image = /home/dobby/Pictures/Wallpapers/line_icons.png
-$tertiary_fixed = rgba(ffd9e3ff)
+$image = /home/dobby/Pictures/Wallpapers/Sierra Something.jpg
+$tertiary_fixed = rgba(d6e3ffff)
 
-$image = /home/dobby/Pictures/Wallpapers/line_icons.png
-$tertiary_fixed_dim = rgba(efb8c8ff)
+$image = /home/dobby/Pictures/Wallpapers/Sierra Something.jpg
+$tertiary_fixed_dim = rgba(b6c7e9ff)
