--- a/config/hypr/Modules/All-About-UI/borders.conf
+++ b/config/hypr/Modules/All-About-UI/borders.conf
@@ -1,19 +1,19 @@
 general {
-	border_size = 2
-	no_border_on_floating = false
-	gaps_in = 4
-	gaps_out = 10
+    border_size = 2
+    no_border_on_floating = false
+    gaps_in = 4
+    gaps_out = 10
 
-	col.active_border = $primary
-	col.inactive_border = $secondary
+    col.active_border = $primary           # use accent color for active
+    col.inactive_border = $outline_variant # subtle inactive borders
 
-	layout = dwindle
+    layout = dwindle
 
-	resize_on_border = false
+    resize_on_border = false
 
-	snap {
-		enabled = false
-		window_gap = 10
-		monitor_gap = 10
-	}
+    snap {
+        enabled = false
+        window_gap = 10
+        monitor_gap = 10
+    }
 }
