--- a/config/hypr/Modules/All-About-UI/decorations.conf
+++ b/config/hypr/Modules/All-About-UI/decorations.conf
@@ -1,34 +1,35 @@
 decoration {
-	rounding = 10
-	rounding_power = 4.0
+    rounding = 10
+    rounding_power = 4.0
 
-	active_opacity = 0.9
-	inactive_opacity = 0.88
-	fullscreen_opacity = 1.0
+    # Opacity settings
+    active_opacity = 0.95       # translucent, not aggressive
+    inactive_opacity = 0.93
+    fullscreen_opacity = 1.0
 
-	dim_inactive = false
-	dim_strength = 0.5
+    dim_inactive = false
+    dim_strength = 0.5
 
-	border_part_of_window = false
+    border_part_of_window = false
 
-	blur {
-		enabled = true
-		size = 4
-		passes = 2
-		ignore_opacity = true
-		new_optimizations = true
-		xray = false
-		vibrancy = 0.8
-		vibrancy_darkness = 0.1
-		popups = false
-		input_methods = false
-	}
+    blur {
+        enabled = true
+        size = 6                # smooth frosted glass
+        passes = 3              # more passes for soft blur
+        ignore_opacity = true
+        new_optimizations = true
+        xray = false
+        vibrancy = 0.75          # subtle color bleed
+        vibrancy_darkness = 0.05
+        popups = false
+        input_methods = false
+    }
 
-	shadow {
-		enabled = true
-		range = 3
-		render_power = 2
-		sharp = false
-		ignore_window = true
-	}
+    shadow {
+        enabled = true
+        range = 4
+        render_power = 2
+        sharp = false
+        ignore_window = true
+    }
 }
