[update] hyprland conf

--- a/config/hypr/Modules/All-About-UI/decorations.conf
+++ b/config/hypr/Modules/All-About-UI/decorations.conf
@@ -2,8 +2,7 @@ decoration {
     rounding = 10
     rounding_power = 4.0
 
-    # Opacity settings
-    active_opacity = 0.95       # translucent, not aggressive
+    active_opacity = 0.95
     inactive_opacity = 0.93
     fullscreen_opacity = 1.0
 
@@ -14,12 +13,12 @@ decoration {
 
     blur {
         enabled = true
-        size = 6                # smooth frosted glass
-        passes = 3              # more passes for soft blur
+        size = 6
+        passes = 3
         ignore_opacity = true
         new_optimizations = true
         xray = false
-        vibrancy = 0.75          # subtle color bleed
+        vibrancy = 0.75
         vibrancy_darkness = 0.05
         popups = false
         input_methods = false
