[update] core installer and rice scripts

--- a/config/hypr/Modules/All-About-UI/colors.conf
+++ b/config/hypr/Modules/All-About-UI/colors.conf
@@ -1,150 +1,150 @@
 
-$image = /home/dobby/Pictures/Wallpapers/Sierra Something.jpg
-$background = rgba(0e1415ff)
+$image = /home/dobby/Pictures/Wallpapers/Minimal Coffee.jpg
+$background = rgba(18120cff)
 
-$image = /home/dobby/Pictures/Wallpapers/Sierra Something.jpg
+$image = /home/dobby/Pictures/Wallpapers/Minimal Coffee.jpg
 $error = rgba(ffb4abff)
 
-$image = /home/dobby/Pictures/Wallpapers/Sierra Something.jpg
+$image = /home/dobby/Pictures/Wallpapers/Minimal Coffee.jpg
 $error_container = rgba(93000aff)
 
-$image = /home/dobby/Pictures/Wallpapers/Sierra Something.jpg
-$inverse_on_surface = rgba(2b3232ff)
+$image = /home/dobby/Pictures/Wallpapers/Minimal Coffee.jpg
+$inverse_on_surface = rgba(372f27ff)
 
-$image = /home/dobby/Pictures/Wallpapers/Sierra Something.jpg
-$inverse_primary = rgba(00696eff)
+$image = /home/dobby/Pictures/Wallpapers/Minimal Coffee.jpg
+$inverse_primary = rgba(835415ff)
 
-$image = /home/dobby/Pictures/Wallpapers/Sierra Something.jpg
-$inverse_surface = rgba(dde4e4ff)
+$image = /home/dobby/Pictures/Wallpapers/Minimal Coffee.jpg
+$inverse_surface = rgba(eee0d5ff)
 
-$image = /home/dobby/Pictures/Wallpapers/Sierra Something.jpg
-$on_background = rgba(dde4e4ff)
+$image = /home/dobby/Pictures/Wallpapers/Minimal Coffee.jpg
+$on_background = rgba(eee0d5ff)
 
-$image = /home/dobby/Pictures/Wallpapers/Sierra Something.jpg
+$image = /home/dobby/Pictures/Wallpapers/Minimal Coffee.jpg
 $on_error = rgba(690005ff)
 
-$image = /home/dobby/Pictures/Wallpapers/Sierra Something.jpg
+$image = /home/dobby/Pictures/Wallpapers/Minimal Coffee.jpg
 $on_error_container = rgba(ffdad6ff)
 
-$image = /home/dobby/Pictures/Wallpapers/Sierra Something.jpg
-$on_primary = rgba(003739ff)
+$image = /home/dobby/Pictures/Wallpapers/Minimal Coffee.jpg
+$on_primary = rgba(482a00ff)
 
-$image = /home/dobby/Pictures/Wallpapers/Sierra Something.jpg
-$on_primary_container = rgba(9cf0f6ff)
+$image = /home/dobby/Pictures/Wallpapers/Minimal Coffee.jpg
+$on_primary_container = rgba(ffddbaff)
 
-$image = /home/dobby/Pictures/Wallpapers/Sierra Something.jpg
-$on_primary_fixed = rgba(002021ff)
+$image = /home/dobby/Pictures/Wallpapers/Minimal Coffee.jpg
+$on_primary_fixed = rgba(2b1700ff)
 
-$image = /home/dobby/Pictures/Wallpapers/Sierra Something.jpg
-$on_primary_fixed_variant = rgba(004f53ff)
+$image = /home/dobby/Pictures/Wallpapers/Minimal Coffee.jpg
+$on_primary_fixed_variant = rgba(663d00ff)
 
-$image = /home/dobby/Pictures/Wallpapers/Sierra Something.jpg
-$on_secondary = rgba(1b3436ff)
+$image = /home/dobby/Pictures/Wallpapers/Minimal Coffee.jpg
+$on_secondary = rgba(3f2d17ff)
 
-$image = /home/dobby/Pictures/Wallpapers/Sierra Something.jpg
-$on_secondary_container = rgba(cce8e9ff)
+$image = /home/dobby/Pictures/Wallpapers/Minimal Coffee.jpg
+$on_secondary_container = rgba(fdddbdff)
 
-$image = /home/dobby/Pictures/Wallpapers/Sierra Something.jpg
-$on_secondary_fixed = rgba(041f21ff)
+$image = /home/dobby/Pictures/Wallpapers/Minimal Coffee.jpg
+$on_secondary_fixed = rgba(281805ff)
 
-$image = /home/dobby/Pictures/Wallpapers/Sierra Something.jpg
-$on_secondary_fixed_variant = rgba(324b4dff)
+$image = /home/dobby/Pictures/Wallpapers/Minimal Coffee.jpg
+$on_secondary_fixed_variant = rgba(58432bff)
 
-$image = /home/dobby/Pictures/Wallpapers/Sierra Something.jpg
-$on_surface = rgba(dde4e4ff)
+$image = /home/dobby/Pictures/Wallpapers/Minimal Coffee.jpg
+$on_surface = rgba(eee0d5ff)
 
-$image = /home/dobby/Pictures/Wallpapers/Sierra Something.jpg
-$on_surface_variant = rgba(bec8c9ff)
+$image = /home/dobby/Pictures/Wallpapers/Minimal Coffee.jpg
+$on_surface_variant = rgba(d4c4b5ff)
 
-$image = /home/dobby/Pictures/Wallpapers/Sierra Something.jpg
-$on_tertiary = rgba(1f314cff)
+$image = /home/dobby/Pictures/Wallpapers/Minimal Coffee.jpg
+$on_tertiary = rgba(283412ff)
 
-$image = /home/dobby/Pictures/Wallpapers/Sierra Something.jpg
-$on_tertiary_container = rgba(d6e3ffff)
+$image = /home/dobby/Pictures/Wallpapers/Minimal Coffee.jpg
+$on_tertiary_container = rgba(d9e9b7ff)
 
-$image = /home/dobby/Pictures/Wallpapers/Sierra Something.jpg
-$on_tertiary_fixed = rgba(081c36ff)
+$image = /home/dobby/Pictures/Wallpapers/Minimal Coffee.jpg
+$on_tertiary_fixed = rgba(141f02ff)
 
-$image = /home/dobby/Pictures/Wallpapers/Sierra Something.jpg
-$on_tertiary_fixed_variant = rgba(364764ff)
+$image = /home/dobby/Pictures/Wallpapers/Minimal Coffee.jpg
+$on_tertiary_fixed_variant = rgba(3e4b26ff)
 
-$image = /home/dobby/Pictures/Wallpapers/Sierra Something.jpg
-$outline = rgba(899393ff)
+$image = /home/dobby/Pictures/Wallpapers/Minimal Coffee.jpg
+$outline = rgba(9d8e81ff)
 
-$image = /home/dobby/Pictures/Wallpapers/Sierra Something.jpg
-$outline_variant = rgba(3f4949ff)
+$image = /home/dobby/Pictures/Wallpapers/Minimal Coffee.jpg
+$outline_variant = rgba(50453aff)
 
-$image = /home/dobby/Pictures/Wallpapers/Sierra Something.jpg
-$primary = rgba(80d4d9ff)
+$image = /home/dobby/Pictures/Wallpapers/Minimal Coffee.jpg
+$primary = rgba(f9ba72ff)
 
-$image = /home/dobby/Pictures/Wallpapers/Sierra Something.jpg
-$primary_container = rgba(004f53ff)
+$image = /home/dobby/Pictures/Wallpapers/Minimal Coffee.jpg
+$primary_container = rgba(663d00ff)
 
-$image = /home/dobby/Pictures/Wallpapers/Sierra Something.jpg
-$primary_fixed = rgba(9cf0f6ff)
+$image = /home/dobby/Pictures/Wallpapers/Minimal Coffee.jpg
+$primary_fixed = rgba(ffddbaff)
 
-$image = /home/dobby/Pictures/Wallpapers/Sierra Something.jpg
-$primary_fixed_dim = rgba(80d4d9ff)
+$image = /home/dobby/Pictures/Wallpapers/Minimal Coffee.jpg
+$primary_fixed_dim = rgba(f9ba72ff)
 
-$image = /home/dobby/Pictures/Wallpapers/Sierra Something.jpg
+$image = /home/dobby/Pictures/Wallpapers/Minimal Coffee.jpg
 $scrim = rgba(000000ff)
 
-$image = /home/dobby/Pictures/Wallpapers/Sierra Something.jpg
-$secondary = rgba(b1cccdff)
+$image = /home/dobby/Pictures/Wallpapers/Minimal Coffee.jpg
+$secondary = rgba(e0c1a3ff)
 
-$image = /home/dobby/Pictures/Wallpapers/Sierra Something.jpg
-$secondary_container = rgba(324b4dff)
+$image = /home/dobby/Pictures/Wallpapers/Minimal Coffee.jpg
+$secondary_container = rgba(58432bff)
 
-$image = /home/dobby/Pictures/Wallpapers/Sierra Something.jpg
-$secondary_fixed = rgba(cce8e9ff)
+$image = /home/dobby/Pictures/Wallpapers/Minimal Coffee.jpg
+$secondary_fixed = rgba(fdddbdff)
 
-$image = /home/dobby/Pictures/Wallpapers/Sierra Something.jpg
-$secondary_fixed_dim = rgba(b1cccdff)
+$image = /home/dobby/Pictures/Wallpapers/Minimal Coffee.jpg
+$secondary_fixed_dim = rgba(e0c1a3ff)
 
-$image = /home/dobby/Pictures/Wallpapers/Sierra Something.jpg
+$image = /home/dobby/Pictures/Wallpapers/Minimal Coffee.jpg
 $shadow = rgba(000000ff)
 
-$image = /home/dobby/Pictures/Wallpapers/Sierra Something.jpg
-$source_color = rgba(5a8a8dff)
+$image = /home/dobby/Pictures/Wallpapers/Minimal Coffee.jpg
+$source_color = rgba(e9be90ff)
 
-$image = /home/dobby/Pictures/Wallpapers/Sierra Something.jpg
-$surface = rgba(0e1415ff)
+$image = /home/dobby/Pictures/Wallpapers/Minimal Coffee.jpg
+$surface = rgba(18120cff)
 
-$image = /home/dobby/Pictures/Wallpapers/Sierra Something.jpg
-$surface_bright = rgba(343a3bff)
+$image = /home/dobby/Pictures/Wallpapers/Minimal Coffee.jpg
+$surface_bright = rgba(403830ff)
 
-$image = /home/dobby/Pictures/Wallpapers/Sierra Something.jpg
-$surface_container = rgba(1a2121ff)
+$image = /home/dobby/Pictures/Wallpapers/Minimal Coffee.jpg
+$surface_container = rgba(251e17ff)
 
-$image = /home/dobby/Pictures/Wallpapers/Sierra Something.jpg
-$surface_container_high = rgba(252b2bff)
+$image = /home/dobby/Pictures/Wallpapers/Minimal Coffee.jpg
+$surface_container_high = rgba(302921ff)
 
-$image = /home/dobby/Pictures/Wallpapers/Sierra Something.jpg
-$surface_container_highest = rgba(303636ff)
+$image = /home/dobby/Pictures/Wallpapers/Minimal Coffee.jpg
+$surface_container_highest = rgba(3b332cff)
 
-$image = /home/dobby/Pictures/Wallpapers/Sierra Something.jpg
-$surface_container_low = rgba(161d1dff)
+$image = /home/dobby/Pictures/Wallpapers/Minimal Coffee.jpg
+$surface_container_low = rgba(211a13ff)
 
-$image = /home/dobby/Pictures/Wallpapers/Sierra Something.jpg
-$surface_container_lowest = rgba(090f10ff)
+$image = /home/dobby/Pictures/Wallpapers/Minimal Coffee.jpg
+$surface_container_lowest = rgba(130d07ff)
 
-$image = /home/dobby/Pictures/Wallpapers/Sierra Something.jpg
-$surface_dim = rgba(0e1415ff)
+$image = /home/dobby/Pictures/Wallpapers/Minimal Coffee.jpg
+$surface_dim = rgba(18120cff)
 
-$image = /home/dobby/Pictures/Wallpapers/Sierra Something.jpg
-$surface_tint = rgba(80d4d9ff)
+$image = /home/dobby/Pictures/Wallpapers/Minimal Coffee.jpg
+$surface_tint = rgba(f9ba72ff)
 
-$image = /home/dobby/Pictures/Wallpapers/Sierra Something.jpg
-$surface_variant = rgba(3f4949ff)
+$image = /home/dobby/Pictures/Wallpapers/Minimal Coffee.jpg
+$surface_variant = rgba(50453aff)
 
-$image = /home/dobby/Pictures/Wallpapers/Sierra Something.jpg
-$tertiary = rgba(b6c7e9ff)
+$image = /home/dobby/Pictures/Wallpapers/Minimal Coffee.jpg
+$tertiary = rgba(bdcd9dff)
 
-$image = /home/dobby/Pictures/Wallpapers/Sierra Something.jpg
-$tertiary_container = rgba(364764ff)
+$image = /home/dobby/Pictures/Wallpapers/Minimal Coffee.jpg
+$tertiary_container = rgba(3e4b26ff)
 
-$image = /home/dobby/Pictures/Wallpapers/Sierra Something.jpg
-$tertiary_fixed = rgba(d6e3ffff)
+$image = /home/dobby/Pictures/Wallpapers/Minimal Coffee.jpg
+$tertiary_fixed = rgba(d9e9b7ff)
 
-$image = /home/dobby/Pictures/Wallpapers/Sierra Something.jpg
-$tertiary_fixed_dim = rgba(b6c7e9ff)
+$image = /home/dobby/Pictures/Wallpapers/Minimal Coffee.jpg
+$tertiary_fixed_dim = rgba(bdcd9dff)
