[update] added swaync. lots of broken stuff. may or may not fix soon.

--- a/config/hypr/Modules/All-About-UX/variables.conf
+++ b/config/hypr/Modules/All-About-UX/variables.conf
@@ -8,4 +8,4 @@ $volume_control = pavucontrol
 
 $UI = ~/.config/hypr/Modules/All-About-UI
 $UX = ~/.config/hypr/Modules/All-About-UX
-$Script = ~/.config/hypr/Modules/All-About-UX/Scripts
+$Script = ~/Scripts
