--- a/config/matugen/config.toml
+++ b/config/matugen/config.toml
@@ -9,7 +9,7 @@ post_hook = 'hyprctl reload'
 
 [templates.waybar]
 input_path = '~/.config/matugen/templates/colors.css'
-output_path = '~/.config/waybar/colors.css'
+output_path = '~/.config/waybar/Styles/colors.css'
 post_hook = 'pkill -SIGUSR2 waybar'
 
 [templates.kitty]
